--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "15.3.2",
-    "react-native": "0.36.1"
+    "react": "^15.3.2",
+    "react-native": "^0.37.0",
+    "whatwg-fetch": "^1.1.0"
   },
   "jest": {
     "preset": "jest-react-native"
