--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
     "react": "^15.3.2",
@@ -15,13 +16,13 @@
     "preset": "jest-react-native"
   },
   "devDependencies": {
-    "babel-jest": "16.0.0",
-    "babel-preset-react-native": "1.9.0",
+    "babel-jest": "^16.0.0",
+    "babel-preset-react-native": "^1.9.0",
     "eslint": "^3.10.2",
     "eslint-plugin-react": "^6.7.1",
-    "jest": "16.0.2",
-    "jest-react-native": "16.0.0",
-    "react-test-renderer": "15.3.2",
+    "jest": "^16.0.2",
+    "jest-react-native": "^16.1.0",
+    "react-test-renderer": "^15.4.1",
     "shared-git-hooks": "^1.2.1"
   }
 }
