Added start screen

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
   },
   "globals": {
     "it": true,
+    "require": true,
     "setInterval": true,
     "clearInterval": true,
     "console": true,
