Added lodash to dependencies

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.4.1",
     "react-native": "^0.39.0",
     "whatwg-fetch": "^1.1.0"
