--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^15.4.1",
     "react-native": "^0.39.0",
     "react-style-proptype": "^1.4.0",
+    "react-native-sound": "^0.8.3",
     "whatwg-fetch": "^1.1.0"
   },
   "jest": {
