UnitContainer is now Lane, Fixes unit flickering and adds performance by not unmounting all of them, Adds Map basecomponent and Touchable helper component

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.4",
     "react": "^15.4.1",
     "react-native": "^0.39.0",
+    "react-style-proptype": "^1.4.0",
     "whatwg-fetch": "^1.1.0"
   },
   "jest": {
