--- a/.eslintrc
+++ b/.eslintrc
@@ -41,7 +41,8 @@
     "console": true,
     "describe": true,
     "expect": true,
-    "Set": true
+    "Set": true,
+    "requestAnimationFrame": true
   },
   "plugins": [
     "react"
