--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "lodash": "^4.17.4",
+    "prop-types": "^15.5.9",
     "react": "^15.4.1",
     "react-native": "^0.39.0",
-    "react-style-proptype": "^1.4.0",
     "react-native-sound": "^0.8.3",
+    "react-style-proptype": "^1.4.0",
     "whatwg-fetch": "^1.1.0"
   },
   "jest": {
