--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "amazon-cognito-js": "^1.1.0",
+    "aws-sdk": "^2.112.0",
     "lodash": "^4.17.4",
+    "node-localstorage": "^1.3.0",
     "react": "^15.4.1",
     "react-native": "^0.39.0",
-    "react-style-proptype": "^1.4.0",
     "react-native-sound": "^0.8.3",
+    "react-style-proptype": "^1.4.0",
     "whatwg-fetch": "^1.1.0"
   },
   "jest": {
