--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "standard 'src/**/*.js' 'src/**/*.jsx' | snazzy",
+    "lint:fix": "standard 'src/**/*.js' 'src/**/*.jsx' --fix | snazzy"
   },
   "dependencies": {
     "lodash": "^4.17.4",
@@ -21,11 +22,11 @@
   "devDependencies": {
     "babel-jest": "^16.0.0",
     "babel-preset-react-native": "^1.9.0",
-    "eslint": "^3.10.2",
-    "eslint-plugin-react": "^6.7.1",
     "jest": "^16.0.2",
     "jest-react-native": "^16.1.0",
     "react-test-renderer": "^15.4.1",
-    "shared-git-hooks": "^1.2.1"
+    "shared-git-hooks": "^1.2.1",
+    "snazzy": "^7.0.0",
+    "standard": "^10.0.3"
   }
 }
