--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lodash": "^4.17.4",
     "react": "^15.4.1",
     "react-native": "^0.39.0",
-    "react-style-proptype": "^1.4.0",
     "react-native-sound": "^0.8.3",
+    "react-style-proptype": "^1.4.0",
+    "version": "^0.1.2",
     "whatwg-fetch": "^1.1.0"
   },
   "jest": {
